# lince

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DatastarDocumentation.html  Dockerfile  KARMA_ORCHESTRA_KARMA_MODAL_PLAN.md  KARMA_ORCHESTRA_SAND.md  LICENSE  Makefile  README  README.md  SCHEMA_FIRST_DB_PLAN.md  TRANSFER.md  a.html  a.md  architecture.md  bacon.toml  base_de_dados.sql  book.toml  cliff.toml  condition_changer.py  crud.py  crud_do_zero.py  default.nix  devenv.nix  documentation.md  documentation.nix  event.json  fix_widget_runtime_sandbox.md  flake.nix  foi.html  frontend.py  implementation_steps.md  justfile  language-servers.nix  (+25 more)
crates/application/: Cargo.toml
crates/application/src/: auth.rs  automatic_update.rs  command.rs  configuration.rs  file_sync.rs  frequency.rs  gpui.rs  karma.rs  karma_analysis.rs  lib.rs  operation.rs  query.rs  subscription.rs  table.rs  view.rs  write.rs
crates/application/src/mosca/: anicca.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/desktop-dist/: index.html
crates/desktop/src/: bootstrap_config.rs  main.rs  runtime.rs
crates/desktop/windows/: nsis-installer-hooks.nsh
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  special_views.rs
crates/domain/src/clean/: app_user.rs  configuration.rs  frequency.rs  karma.rs  mod.rs  pinned_view.rs  record.rs  role.rs  transfer.rs  view.rs
crates/domain/src/dirty/: collection.rs  gpui.rs  mod.rs  operation.rs  view.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  collection_view_column_widths.rs  keybinding_mode.rs  lib.rs  mod.rs  state.rs  workspace.rs
crates/gui/src/components/: collection.rs  command_notifications.rs  command_watcher.rs  creation_modal.rs  mod.rs  modal_frame.rs  operation.rs  table.rs  table_vim.rs
crates/html/: Cargo.toml
crates/html/src/: api.rs  collection.rs  datastar.rs  lib.rs
crates/html/src/colorscheme/catppuccin/: mod.rs
crates/html/src/colorscheme/mono/: black_in_white.rs  white_in_black.rs
crates/html/src/colorscheme/perfect_blue/: mod.rs
crates/html/src/karma/: search.rs
crates/html/src/operation/: create.rs  get.rs  query.rs
crates/html/src/pages/: test.rs
crates/html/src/pages/karma/: collection.rs  orchestra.rs  view.rs
crates/html/src/section/: body.rs  header.rs  main.rs  mod.rs  nav.rs  page.rs  style.rs
crates/html/src/table/: add_row.rs  editable_row.rs  mod.rs  tables.rs
crates/html/src/utils/: column_information.rs  to_table.rs
crates/html/src/view/: toggle_all.rs
crates/injection/: Cargo.toml
crates/injection/src/: cross_cutting.rs  lib.rs
crates/lince/: Cargo.toml  README.md  build.rs
crates/lince/src/: bootstrap_config.rs  main.rs
crates/persistence/: Cargo.toml  build.rs  mod.rs
crates/persistence-table-derive/: Cargo.toml
crates/persistence-table-derive/src/: lib.rs
crates/persistence/management/: schema.rs
crates/persistence/repositories/: command.rs  record.rs
crates/persistence/src/: connection.rs  lib.rs  schema.rs  seeder.rs  storage.rs  write_coordinator.rs
crates/persistence/src/management/: mod.rs
crates/persistence/src/models/: auth.rs  core.rs  karma.rs  mod.rs  sidecars.rs
crates/persistence/src/repositories/: collection.rs  command.rs  configuration.rs  frequency.rs  karma.rs  mod.rs  operation.rs  query.rs  record.rs  table.rs  user.rs  view.rs
crates/persistence/src/schema/: apply.rs  inspect.rs  mod.rs  registry.rs  sql.rs  state.rs  types.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs
crates/tui/src/app/: components.rs  logic.rs  rendering.rs
crates/tui/src/components/: mod.rs
crates/tui/src/pages/: counter.rs
crates/utils/: Cargo.toml
crates/utils/src/: auth.rs  config.rs  desktop_setup.rs  file_access.rs  lib.rs  logging.rs  macros.rs
crates/web/: .lince-board-state.json  Cargo.toml
crates/web/lince-views/: local-terminal.lince  record-crud.lince
crates/web/src/: lib.rs
crates/web/src/application/: ai_builder.rs  backend_api.rs  kanban_actions.rs  kanban_filters.rs  kanban_identity.rs  kanban_render.rs  kanban_streams.rs  karma_orchestra_identity.rs  karma_orchestra_widget.rs  mod.rs  relations_identity.rs  state.rs  trail_identity.rs  trail_widget.rs  transfer_identity.rs  transfer_widget.rs  view_table_render.rs  widget_runtime.rs
crates/web/src/colorscheme/: mod.rs
crates/web/src/colorscheme/catppuccin/: macchiato.rs
crates/web/src/colorscheme/general/: default.rs
crates/web/src/colorscheme/mono/: mod.rs
crates/web/src/domain/: board.rs  lince_package.rs  mod.rs  widget_bridge.rs  workspace_archive.rs
crates/web/src/infrastructure/: auth.rs  backend_api_store.rs  board_state_store.rs  dna_hub_store.rs  manas.rs  mod.rs  organ_store.rs  package_catalog_store.rs  package_preview_store.rs  paths.rs  prompt_fragments.rs  server_profile_store.rs  terminal_store.rs  widget_bridge_store.rs
crates/web/src/presentation/: mod.rs  pages.rs
crates/web/src/presentation/http/: api_error.rs  auth_middleware.rs  docs.rs  mod.rs  router.rs  static_assets.rs
crates/web/src/presentation/pages/: ai.rs  app.rs  mod.rs  shared.rs  trail.rs
crates/web/src/sand/: bucket_image_view.rs  extra_simple.rs  general_creation.rs  kanban_record_view.rs  local_terminal.rs  markdown_notes.rs  mod.rs  ops_clock.rs  organ_management.rs  record_crud.rs  tasklist.rs  tasks_table.rs
crates/web/src/sand/bucket_image_view/: mod.rs
crates/web/src/sand/calendar/: mod.rs
crates/web/src/sand/chess/: mod.rs
crates/web/src/sand/document_viewer/: body.rs  mod.rs  script.rs  style.rs
crates/web/src/sand/doom_portal/: mod.rs
crates/web/src/sand/extra_simple/: mod.rs
crates/web/src/sand/freedoom/: mod.rs
crates/web/src/sand/general_creation/: mod.rs
crates/web/src/sand/ghostty_terminal/: body.rs  mod.rs  styles.css
crates/web/src/sand/kanban/: script.rs  styles.rs
crates/web/static/: ai-builder.css  styles.css
crates/web/view-examples/: extra-simple.lince  lince-logo-led.lince  link-chip.lince  local-terminal.lince  record-crud.lince
(+1015 files in other folders)
