[workspace]
resolver = "3"
members = [
    "crates/lince",
    "crates/application",
    "crates/domain",
    "crates/injection",
    "crates/persistence",
    "crates/gui",
    "crates/utils", "crates/tui",
]

default-members = ["crates/lince"]

[workspace.dependencies]
application = { path = "crates/application" }
domain = { path = "crates/domain" }
injection = {path = "crates/injection" }
lince = {path = "crates/lince", features = ["karma", "gui", "tui"] }
persistence = {path = "crates/persistence" }
gui = {path = "crates/gui" }
tui = {path = "crates/tui" }
utils = { path = "crates/utils" }

async-trait = "0.1.89"
chrono = "0.4.43"
dirs = "6.0.0"
futures = "0.3.31"
gpui = { version="0.2.2"}
gpui-component = {version = "0.5.0"}
gpui-component-assets = {version = "0.5.0"}
regex = "1.12.2"
rhai = "1.24.0"
ropey = "1.6.1"
serde = { version = "1.0.228" }
serde_json = "1.0.149"
sqlx = { version = "0.8.6" }
tokio = { version = "1.49.0" }
ratatui = { version = "0.27" }

[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Full link-time optimization
codegen-units = 1     # Single compilation unit
debug = false         # No debug symbols (runtime doesn't care, size smaller)
incremental = false   # Better optimization
panic = "unwind"      # Keep panic recovery (or "abort" for ~1-3% more speed)

[profile.dev]
opt-level = 0        # Fastest compile
debug = true         # Debug symbols
incremental = true   # Fast incremental builds
codegen-units = 256  # Max parallelism
