[workspace]
resolver = "3"
members = [
    "crates/lince",
    "crates/application",
    "crates/domain",
    "crates/injection",
    "crates/persistence",
    "crates/gui",
    "crates/utils",
    "crates/tui",
    "crates/web",
]

default-members = ["crates/lince"]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/lince-social/lince"
homepage = "https://lince.social"

[workspace.dependencies]
application = { version = "=0.7.0", path = "crates/application", package = "lince-application" }
domain = { version = "=0.7.0", path = "crates/domain", package = "lince-domain" }
injection = { version = "=0.7.0", path = "crates/injection", package = "lince-injection" }
lince = { version = "=0.7.0", path = "crates/lince" }
persistence = { version = "=0.7.0", path = "crates/persistence", package = "lince-persistence" }
gui = { version = "=0.7.0", path = "crates/gui", package = "lince-gui" }
tui = { version = "=0.7.0", path = "crates/tui", package = "lince-tui" }
utils = { version = "=0.7.0", path = "crates/utils", package = "lince-utils" }
web = { version = "=0.7.0", path = "crates/web", package = "lince-web" }

async-trait = "0.1.89"
argon2 = "0.5.3"
aws-config = "1.8.10"
aws-sdk-s3 = "1.112.0"
axum = "0.8.4"
chrono = "0.4.43"
dirs = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
gpui = { version="0.2.2"}
gpui-component = {version = "0.5.0"}
gpui-component-assets = {version = "0.5.0"}
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
maud = "0.27.0"
regex = "1.12.2"
rhai = "1.24.0"
ropey = "1.6.1"
serde = { version = "1.0.228" }
serde_json = "1.0.149"
sqlx = { version = "0.8.6" }
tokio = { version = "1.49.0" }
tokio-util = "0.7.18"
tower-http = { version = "0.6.6", features = ["cors"] }
ratatui = { version = "0.30.0"}
color-eyre = "0.6.5"
crossterm = "0.29.0"

[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Full link-time optimization
codegen-units = 1     # Single compilation unit
debug = false         # No debug symbols (runtime doesn't care, size smaller)
incremental = false   # Better optimization
panic = "unwind"      # Keep panic recovery (or "abort" for ~1-3% more speed)

[profile.dev]
opt-level = 0        # Fastest compile
debug = true         # Debug symbols
incremental = true   # Fast incremental builds
codegen-units = 256  # Max parallelism
