[package]
name = "application"
version = "0.1.0"
edition = "2024"

[features]
gui = []

[dependencies]
domain = { workspace = true }
persistence = { workspace = true }
utils = { workspace = true }
injection = { workspace = true }

async-trait.workspace = true
chrono.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "process"] }
rhai.workspace = true
regex.workspace = true
