[package]
name = "lince-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal application layer for the lince binary."

[lib]
name = "application"

[features]
gui = []

[dependencies]
domain = { workspace = true }
persistence = { workspace = true }
utils = { workspace = true }
injection = { workspace = true }

async-trait.workspace = true
argon2.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "process", "sync", "io-util"] }
rhai.workspace = true
regex.workspace = true
