[package]
name = "lince-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Desktop HTML webview shell for Lince."

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
application = { workspace = true }
injection = { workspace = true }
persistence = { workspace = true }
utils = { workspace = true }
web = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "process", "time", "macros", "sync"] }
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = "1.0"

[[bin]]
name = "lince-desktop"
path = "src/main.rs"
