[package]
name = "lince-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal domain layer for the lince binary."

[lib]
name = "domain"

[dependencies]
serde.workspace = true
chrono.workspace = true
sqlx.workspace = true
