[package]
name = "lince-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal GPUI frontend for the lince binary."

[lib]
name = "gui"

[features]
gui = ["dep:gpui", "dep:gpui-component", "dep:gpui-component-assets"]

[dependencies]
application = { workspace = true }
domain = { workspace = true }
injection = { workspace = true }
persistence = { workspace = true }
utils = { workspace = true }

gpui = { workspace = true, optional = true }
gpui-component = { workspace = true, optional = true }
gpui-component-assets = { workspace = true, optional = true }
ropey = { workspace = true }
tokio = { workspace = true, features = ["time"] }
