[package]
name = "html"
version = "0.1.0"
edition = "2024"

[dependencies]
application.workspace = true
axum.workspace = true
domain.workspace = true
injection.workspace = true
maud.workspace = true
persistence.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
utils.workspace = true
