[package]
name = "html"
version = "0.1.0"
edition = "2024"

[dependencies]
application.workspace = true
axum.workspace = true
domain.workspace = true
injection.workspace = true
maud.workspace = true
futures.workspace = true
persistence.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util.workspace = true
tower-http.workspace = true
utils.workspace = true
