[package]
name = "lince-injection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal dependency injection layer for the lince binary."

[lib]
name = "injection"

[dependencies]
persistence = { workspace = true }
domain = { workspace = true }
sqlx.workspace = true
