[package]
name = "lince"
version = "0.6.1"
edition = "2024"
description = "Tool for registry, interconnection and automation of Needs and Contributions with open scope"
license = "GPL-3.0-or-later"
# keywords = ["todo"]
# include = ["/crates", "Cargo.toml", "LICENSE"]

[features]
default = ["karma", "http"]
karma = []
gui = ["gui/gui"]
tui = ["tui/tui"]
http = ["dep:web"]

[dependencies]
application = { workspace = true }
domain = { workspace = true }
injection = { workspace = true }
persistence = { workspace = true }
crossterm = { workspace = true }
gui = { workspace = true, optional = true }
tui = { workspace = true, optional = true }
web = { workspace = true, optional = true }
utils = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "process", "time", "macros"] }
sqlx = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }
