[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
utils = { workspace = true }
sqlx = {workspace = true, features = ["runtime-tokio", "sqlite", "macros"]}
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
dirs.workspace = true
