[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[features]
tui = ["dep:ratatui", "dep:color-eyre", "dep:crossterm"]

[dependencies]
domain = { workspace = true }
injection = { workspace = true }
persistence = { workspace = true }
utils = { workspace = true }

ratatui = { workspace = true, optional = true, features = ["serde"] }
color-eyre = {workspace = true, optional = true}
crossterm = {workspace = true, optional = true}
