[package]
name = "lince-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal terminal UI for the lince binary."

[lib]
name = "tui"

[features]
tui = ["dep:ratatui", "dep:color-eyre", "dep:crossterm"]

[dependencies]
application = { workspace = true }
domain = { workspace = true }
injection = { workspace = true }
persistence = { workspace = true }
sqlx = { workspace = true }
utils = { workspace = true }

ratatui = { workspace = true, optional = true, features = ["serde"] }
color-eyre = {workspace = true, optional = true}
crossterm = {workspace = true, optional = true}
