[package]
name = "lince-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal utilities for the lince binary."

[lib]
name = "utils"

[dependencies]
argon2.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde = { workspace = true, features = ["derive"] }
