[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { workspace = true }
async-stream = "0.3.6"
axum = { workspace = true, features = ["json", "multipart"] }
dirs = { workspace = true }
dotenvy = { workspace = true }
injection = { workspace = true }
maud = "0.27.0"
persistence = { workspace = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { workspace = true }
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { workspace = true }
toml = "0.9.8"
tower-http = { workspace = true, features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
utils = { workspace = true }
uuid = { version = "1.18.1", features = ["v4"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
