[package]
name = "lince-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal web frontend for the lince binary."

[lib]
name = "web"

[features]
browser-watch = []

[dependencies]
application = { workspace = true }
async-stream = "0.3.6"
axum = { workspace = true, features = ["json", "multipart"] }
chrono = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
injection = { workspace = true }
maud = "0.27.0"
regex.workspace = true
persistence = { workspace = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { workspace = true }
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { workspace = true }
toml = "0.9.8"
tower-http = { workspace = true, features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
utils = { workspace = true }
uuid = { version = "1.18.1", features = ["v4"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
