[package]
name = "lince-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal web frontend for the lince binary."

[lib]
name = "web"

[features]
browser-watch = []

[dependencies]
application = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true, features = ["json", "multipart", "ws"] }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
injection = { workspace = true }
maud = { workspace = true }
portable-pty = { workspace = true }
regex = { workspace = true }
persistence = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
urlencoding = { workspace = true }
utoipa = { workspace = true }
utils = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zip = { workspace = true, default-features = false, features = ["deflate"] }
